--- a/sandman/build.gradle
+++ b/sandman/build.gradle
@@ -38,4 +38,7 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.4.4'
+
 }
