--- a/sandman/build.gradle
+++ b/sandman/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id 'maven-publish'
 }
 
 android {
@@ -25,6 +26,25 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+}
+
+task sourceJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier "sources"
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                groupId = 'br.com.mrocigno'
+                artifactId = 'sandman'
+                version = '1.0.0'
+
+                from components.debug
+            }
+        }
     }
 }
 
