organizando alguns packages e adiconando track de activity para montar uma timeline

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".SecondActivity"/>
+
         <provider
             android:authorities="${applicationId}.SANDMAN"
             android:name=".TheDreamingCustom"
