crash observer - pt1

--- a/sandman/build.gradle
+++ b/sandman/build.gradle
@@ -12,6 +12,7 @@ android {
     defaultConfig {
         minSdk 23
         targetSdk 33
+        renderscriptTargetApi 24
     }
 
     buildTypes {
