--- a/sandman/src/main/AndroidManifest.xml
+++ b/sandman/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
             android:theme="@style/Theme.Sandman"/>
 
         <activity
+            android:name=".crash.CrashActivity"
+            android:theme="@style/Theme.Sandman"/>
+
+        <activity
             android:name=".network.NetworkEntryDetailsActivity"
             android:theme="@style/Theme.Sandman"/>
     </application>
