--- a/sandman/build.gradle
+++ b/sandman/build.gradle
@@ -1,6 +1,26 @@
-//plugins {
-//    id 'com.android.library'
-//    id 'org.jetbrains.kotlin.android'
-//    id 'kotlin-parcelize'
-//    id 'maven-publish'
-//}
+plugins {
+    id 'java-platform'
+    id 'maven-publish'
+}
+
+dependencies {
+
+    constraints {
+        api project(":sandman:matthew")
+        api project(":sandman:corinthian")
+        api project(":sandman:lucien")
+        api project(":sandman:cain")
+        api project(":sandman:core")
+    }
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = "br.com.mrocigno"
+            artifactId = "sandman-bom"
+            version = "1.0.0"
+            afterEvaluate { from(components["javaPlatform"]) }
+        }
+    }
+}
