--- a/sandman/core/build.gradle
+++ b/sandman/core/build.gradle
@@ -7,6 +7,13 @@ dependencies {
 
     implementation project(":sandman:common")
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.21"
+
+    constraints {
+        api project(":sandman:matthew")
+        api project(":sandman:corinthian")
+        api project(":sandman:lucien")
+        api project(":sandman:cain")
+    }
 }
 
 apply from: file('../../gradle/publish.gradle')
