renomeando muita coisa

--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -1,5 +1,15 @@
 apply plugin: 'maven-publish'
 
+android {
+
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
+}
+
 publishing {
     publications {
 
