--- a/sandman/common/build.gradle
+++ b/sandman/common/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
-apply from: file('../../gradle/publish.gradle')
+apply from: file('../../gradle/publish-oldschool.gradle')
 
 dependencies {
     api 'com.jakewharton.threetenabp:threetenabp:1.4.4'
