--- a/sandman/core/build.gradle
+++ b/sandman/core/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
-apply from: file('../../gradle/publish.gradle')
+apply from: file('../../gradle/publish-oldschool.gradle')
 
 dependencies {
 
