fix gerais removendo cain e colocando as funções de crash dentro de lucien retirando gambiarra dos reports (init) mudando ReportModel para serializable

--- a/sandman/lucien/src/main/AndroidManifest.xml
+++ b/sandman/lucien/src/main/AndroidManifest.xml
@@ -3,10 +3,20 @@
 
     <application>
 
+        <activity android:name=".crash.CrashActivity"
+            android:theme="@style/Theme.Sandman"/>
+
         <provider
             android:authorities="${applicationId}.LUCIEN"
             android:name=".ReportTask"
             android:exported="false"
             android:enabled="true"/>
+
+        <provider
+            android:authorities="${applicationId}.LUCIEN_CRASH"
+            android:name=".crash.CrashTask"
+            android:enabled="true"
+            android:exported="false"/>
+
     </application>
 </manifest>
