upgrade snapshot version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation project(":sandman:core")
-    implementation project(":sandman:lucien")
-    implementation project(":sandman:corinthian")
-    implementation project(":sandman:matthew")
+    implementation "io.github.mrocigno:sandman-core:0.0.3-SNAPSHOT"
+    implementation "io.github.mrocigno:sandman-lucien"
+    implementation "io.github.mrocigno:sandman-corinthian"
+    implementation "io.github.mrocigno:sandman-matthew"
 }
