--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
 
         <activity android:name=".ui.network.NetworkActivity" />
 
+        <activity android:name=".ui.report.ReportActivity" />
+
         <provider
             android:authorities="${applicationId}.SAMPLE"
             android:name=".BigBrotherCustom"
