renomeando resources e melhorando o sample

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
 
         <activity android:name=".ui.report.ReportActivity" />
 
+        <activity android:name=".ui.general.OutOfDomainActivity" />
+
+        <activity android:name=".ui.general.CustomPageActivity" />
+
         <provider
             android:authorities="${applicationId}.SAMPLE"
             android:name=".BigBrotherCustom"
