--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 
     implementation project(":content:core")
     implementation project(":content:report")
+    implementation project(":content:crash")
     implementation project(":content:network")
     implementation project(":content:log")
 }
