--- a/content/core/build.gradle
+++ b/content/core/build.gradle
@@ -14,5 +14,6 @@ dependencies {
         api project(":content:log")
         api project(":content:network")
         api project(":content:report")
+        api project(":content:crash")
     }
 }
