--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     implementation project(":content:crash")
     implementation project(":content:network")
     implementation project(":content:log")
+    implementation project(":content:session")
 }
