--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.1.0-alpha11' apply false
-    id 'com.android.library' version '8.1.0-alpha11' apply false
+    id 'com.android.application' version '8.1.0' apply false
+    id 'com.android.library' version '8.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
     id 'io.github.pedro-bachiega.sonatype-maven-publish' version '0.0.2' apply false
 }
@@ -27,6 +27,12 @@ allprojects {
                 resConfigs "en", "pt"
 
                 testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+                javaCompileOptions {
+                    annotationProcessorOptions {
+                        arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+                    }
+                }
             }
 
             buildTypes {
