--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':content:network'
 include ':content:log'
 include ':content:report'
 include ':content:crash'
+include ':content:session'
