adicionando logs no banco de dados

--- a/content/crash/build.gradle
+++ b/content/crash/build.gradle
@@ -10,5 +10,8 @@ dependencies {
 
     compileOnly project(":content:core")
     compileOnly project(":content:report")
+
     implementation project(":content:common")
+
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 }
