--- a/content/network/build.gradle
+++ b/content/network/build.gradle
@@ -8,10 +8,12 @@ apply from: file('../../gradle/publish-oldschool.gradle')
 
 dependencies {
 
-    implementation project(":content:common")
-
     compileOnly project(":content:core")
+    compileOnly project(":content:report")
+
     compileOnly 'com.squareup.retrofit2:retrofit:2.9.0'
     compileOnly 'com.squareup.okhttp3:okhttp:4.10.0'
     compileOnly 'com.jakewharton.threetenabp:threetenabp:1.4.4'
+
+    implementation project(":content:common")
 }
