--- a/content/report/build.gradle
+++ b/content/report/build.gradle
@@ -2,12 +2,21 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 }
 
 apply from: file('../../gradle/publish-oldschool.gradle')
 
 dependencies {
 
+    def room_version = "2.5.2"
+
     compileOnly project(":content:core")
+
     implementation project(":content:common")
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
