--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    alias libs.plugins.android.application
+    alias libs.plugins.android.kotlin
 }
 
 android {
@@ -11,14 +11,13 @@ android {
 
 dependencies {
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation libs.squareup.retrofit
+    implementation libs.squareup.retrofit.gson
+    implementation libs.squareup.okhttp3
+    implementation libs.squareup.okhttp3.logging
+    implementation libs.kotlin.coroutines
+    implementation libs.androidx.lifecycle.runtime
+    implementation libs.gson
 
     implementation project(":content:core")
     implementation project(":content:report")
