--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,12 @@ dependencyResolutionManagement {
             url "https://s01.oss.sonatype.org/content/repositories/snapshots/"
         }
     }
+
+    versionCatalogs {
+        create("libs") {
+            from(files("./gradle/libs.toml"))
+        }
+    }
 }
 
 rootProject.name = "big-brother"
