--- a/content/report/build.gradle
+++ b/content/report/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'kotlin-kapt'
 }
 
-apply from: file('../../gradle/publish-oldschool.gradle')
+apply from: file('../../gradle/publish.gradle')
 
 dependencies {
 
