--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -1,72 +1,73 @@
-apply plugin: 'io.github.pedro-bachiega.sonatype-maven-publish'
+apply plugin: 'maven-publish'
+apply plugin: 'signing'
 
-group = "io.github.mrocigno"
-version = "0.0.1-SNAPSHOT"
+def libGroup = "io.github.mrocigno"
+def libVersion = "0.0.4-SNAPSHOT"
 
 android {
 
-    task sourcesJar(type: Jar) {
-        from android.sourceSets.main.java.srcDirs
-        classifier = 'sources'
-    }
-
-    task javadoc(type: Javadoc) {
-        excludes = ['**/*.kt']
-        source = android.sourceSets.main.java.srcDirs
-        classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    }
-
-    task javadocJar(type: Jar, dependsOn: javadoc) {
-        classifier = 'javadoc'
-        from javadoc.destinationDir
-    }
-
-    tasks.withType(Javadoc) {
-        options.addStringOption('Xdoclint:none', '-quiet')
-        options.addStringOption('encoding', 'UTF-8')
-    }
-
-    artifacts {
-        archives javadocJar, sourcesJar
-    }
-}
-
-sonatypePublishing {
-    repositoryUrl = "https://github.com/mrocigno/big-brother"
-    repositoryConnectionUrl = "scm:https://github.com/mrocigno/big-brother.git"
-
-    licenseName = "The Apache License, Version 2.0"
-    licenseUrl = "http://www.apache.org/licenses/LICENSE-2.0.txt"
-
-    developerId = developer_id
-    developerName = developer_name
-    developerEmail = developer_email
-
-    username = ossrh_username
-    password = ossrh_password
-}
-
-publications {
-
-    bigbrother {
-        artifactId = "big-brother-${project.name}"
-        libName = "BigBrother ${project.name}"
-        libDescription = "Topper"
-
-        artifact javadocJar
-        artifact sourcesJar
-    }
-}
-
-afterEvaluate {
     publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
+}
 
-        components.each { comp ->
-            if (!comp.name.containsIgnoreCase("release")) return
+publishing {
+    publications {
 
-            publications.each { publication ->
-                publication.from comp
+        maven(MavenPublication) {
+            groupId = libGroup
+            artifactId = "big-brother-${project.name}"
+            version = libVersion
+
+            afterEvaluate {
+                from components.release
+            }
+
+            pom {
+
+                name = 'BigBrother'
+                description = 'Think on a better description'
+                url = 'https://github.com/mrocigno/big-brother'
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = developer_id
+                        name = developer_name
+                        email = developer_email
+                    }
+                }
+                scm {
+                    url = 'https://github.com/mrocigno/big-brother'
+                    connection = "scm:https://github.com/mrocigno/big-brother.git"
+                    developerConnection = 'scm:git@github.com:mrocigno/big-brother.git'
+                }
             }
         }
     }
+
+    repositories {
+        maven {
+            if (libVersion.containsIgnoreCase("SNAPSHOT")) {
+                url = "https://s01.oss.sonatype.org/content/repositories/snapshots"
+            } else {
+                url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
+            }
+            credentials {
+                username = ossrh_username
+                password = ossrh_password
+            }
+        }
+    }
+}
+
+signing {
+    sign publishing.publications.maven
 }
