--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,9 @@ android {
     defaultConfig {
         applicationId "br.com.mrocigno.bigbrother"
     }
+
+    buildFeatures.compose true
+    composeOptions.kotlinCompilerExtensionVersion = libs.versions.compose.compiler.get()
 }
 
 dependencies {
@@ -18,6 +21,12 @@ dependencies {
     implementation libs.kotlin.coroutines
     implementation libs.androidx.lifecycle.runtime
     implementation libs.gson
+
+    implementation libs.compose.material3
+    implementation libs.compose.runtime
+    implementation libs.compose.activity
+    implementation libs.compose.preview
+    implementation libs.compose.tooling
 
     implementation project(":content:core")
     implementation project(":content:report")
