--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
 
         <activity android:name=".ui.general.CustomPageActivity" />
 
+        <activity android:name=".ui.compose.ComposableActivity" />
+
         <provider
             android:authorities="${applicationId}.SAMPLE"
             android:name=".BigBrotherCustom"
