--- a/gradle/libs.toml
+++ b/gradle/libs.toml
@@ -8,6 +8,8 @@ agp = "8.1.0"
 threetenabp = "1.4.4"
 retrofit = "2.9.0"
 okhttp3 = "4.10.0"
+compose-compiler = "1.4.0-alpha02"
+compose-runtime = "1.3.3"
 # confirm
 kotlin-reflection = "1.7.21"
 kotlin-coroutines = "1.6.1"
@@ -30,6 +32,14 @@ squareup-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = 
 squareup-retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 squareup-okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp3" }
 squareup-okhttp3-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp3" }
+
+# Compose
+compose-material3 = { module = "androidx.compose.material:material", version = "1.3.1" }
+compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose-runtime" }
+compose-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-runtime" }
+compose-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-runtime" }
+compose-activity = { module = "androidx.activity:activity-compose", version = "1.6.1" }
+
 # Others
 jakewharton-threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
