salvando para depois

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     implementation project(":content:crash")
     implementation project(":content:network")
     implementation project(":content:log")
+    implementation project(":content:leak")
 }
