buscando bancos de dados e listando as tabelas

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation project(":content:crash")
     implementation project(":content:network")
     implementation project(":content:log")
+    implementation project(":content:database")
 }
