adicionando fragment para listar os bds e as tabelas

--- a/content/core/build.gradle
+++ b/content/core/build.gradle
@@ -15,5 +15,6 @@ dependencies {
         api project(":content:network")
         api project(":content:report")
         api project(":content:crash")
+        api project(":content:database")
     }
 }
