--- a/content/database/src/main/AndroidManifest.xml
+++ b/content/database/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
         <provider
             android:authorities="${applicationId}.DATABASE"
-            android:name=".DatabaseFinder"
+            android:name=".DatabaseTask"
             android:exported="false"
             android:enabled="true"/>
     </application>
