--- a/content/database/src/main/AndroidManifest.xml
+++ b/content/database/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
 
     <application>
 
+        <activity
+            android:name=".ui.table.TableInspectorActivity"
+            android:exported="false"
+            android:label="teste"
+            android:theme="@style/Theme.BigBrother"/>
+
         <provider
             android:authorities="${applicationId}.DATABASE"
             android:name=".DatabaseTask"
