adicionando link pro código de referencia adicionando nested scroll dispatcher para funcionar junto com coordinator layout

--- a/content/database/build.gradle
+++ b/content/database/build.gradle
@@ -12,7 +12,5 @@ dependencies {
     compileOnly project(":content:core")
     implementation project(":content:common")
 
-    implementation libs.androidx.room.runtime
-    implementation libs.androidx.room.ktx
-    kapt libs.androidx.room.compiler
+    implementation libs.kotlin.coroutines
 }
