concertando crashs na TableInspectorActivity e iniciando interface de filtros

--- a/content/database/build.gradle
+++ b/content/database/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     implementation project(":content:common")
 
     implementation libs.kotlin.coroutines
+    implementation libs.androidx.activity
 }
