testando github action

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -8,8 +8,8 @@
 name: Publish package to the Maven Central Repository
 
 on:
-  release:
-    types: [created]
+  pull_request:
+    types: [opened]
 
 jobs:
   build:
