--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -9,7 +9,7 @@ name: Publish package to the Maven Central Repository
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, edited]
 
 jobs:
   build:
