--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -39,9 +39,9 @@ publishing {
                 }
                 developers {
                     developer {
-                        id = developer_id
-                        name = developer_name
-                        email = developer_email
+                        id = 'mrocigno'
+                        name = 'Matheus Medeiros'
+                        email = 'rocignom@gmail.com'
                     }
                 }
                 scm {
@@ -61,8 +61,8 @@ publishing {
                 url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
             }
             credentials {
-                username = ossrh_username
-                password = ossrh_password
+                username = System.getenv("ossrh_username") ?: ossrh_username
+                password = System.getenv("ossrh_password") ?: ossrh_password
             }
         }
     }
