--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -20,29 +20,35 @@ jobs:
       packages: write
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
-
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      with:
-        arguments: assemble
-      env:
-        ossrh_username: ${{ secrets.OSSRH_USERNAME }}
-        ossrh_password: ${{ secrets.OSSRH_TOKEN }}
-
-    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-    # the publishing section of your build.gradle
-    - name: Publish to Maven
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      with:
-        arguments: publish
-      env:
-        ORG_GRADLE_PROJECT_signingKeyId: ${{ secrets.KEY_ID }}
-        ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
-        ORG_GRADLE_PROJECT_signingSecretKeyRingFile: ./sandman.gpg
+      - name: Teste
+        uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+        with:
+          arguments: teste
+          args: | 
+            -Paaa=topper
+#    - uses: actions/checkout@v3
+#    - name: Set up JDK 17
+#      uses: actions/setup-java@v3
+#      with:
+#        java-version: '17'
+#        distribution: 'temurin'
+#        cache: gradle
+#
+#    - name: Build with Gradle
+#      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+#      with:
+#        arguments: assemble
+#      env:
+#        ossrh_username: ${{ secrets.OSSRH_USERNAME }}
+#        ossrh_password: ${{ secrets.OSSRH_TOKEN }}
+#
+#    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
+#    # the publishing section of your build.gradle
+#    - name: Publish to Maven
+#      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+#      with:
+#        arguments: publish
+#      env:
+#        ORG_GRADLE_PROJECT_signingKeyId: ${{ secrets.KEY_ID }}
+#        ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
+#        ORG_GRADLE_PROJECT_signingSecretKeyRingFile: ./sandman.gpg
