--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Teste
         uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
         with:
-          arguments: teste
-          args: | 
+          arguments:
+            teste 
             -Paaa=topper
 #    - uses: actions/checkout@v3
 #    - name: Set up JDK 17
