só Deus sabe como ta a mente do palhaço

--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -61,8 +61,10 @@ publishing {
                 url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
             }
             credentials {
-                username = System.getenv("ossrh_username") ?: System.getProperty("ossrh_username")
-                password = System.getenv("ossrh_password") ?: System.getProperty("ossrh_password")
+                username = System.getenv("ossrh_username") ?: project.properties["ossrh_username"]
+                password = System.getenv("ossrh_password") ?: project.properties["ossrh_password"]
+                println(username)
+                println(password)
             }
         }
     }
