--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,15 +1,8 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
-
 name: Publish package to the Maven Central Repository
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened]
 
 jobs:
   build:
@@ -40,14 +33,3 @@ jobs:
       env:
         ossrh_username: ${{ secrets.OSSRH_USERNAME }}
         ossrh_password: ${{ secrets.OSSRH_PASSWORD }}
-
-    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-    # the publishing section of your build.gradle
-#    - name: Publish to Maven
-#      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-#      with:
-#        arguments: |
-#
-#      env:
-#        ossrh_username: ${{ secrets.OSSRH_USERNAME }}
-#        ossrh_password: ${{ secrets.OSSRH_PASSWORD }}
