--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -2,7 +2,7 @@ name: Publish package to the Maven Central Repository
 
 on:
   pull_request:
-    types: [opened]
+    types: [synchronize]
 
 jobs:
   build:
@@ -14,6 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -21,15 +22,24 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Assemble and publish
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      with:
-        arguments: |
-          assemble
-          publish
-          -Psigning.keyId=${{ secrets.KEY_ID }}
-          -Psigning.password=${{ secrets.SIGNING_PASSWORD }}
-          -Psigning.secretKeyRingFile=/home/runner/work/big-brother/big-brother/sandman.gpg
-      env:
-        ossrh_username: ${{ secrets.OSSRH_USERNAME }}
-        ossrh_password: ${{ secrets.OSSRH_PASSWORD }}
+    - name: Get next version name
+      id: new-version
+      uses: proudust/gh-describe@v1.5.3
+
+    - name: Write version into build file
+      shell: bash
+      run: |
+        echo "${{ steps.new-version.outputs.describe }}"
+
+#    - name: Assemble and publish
+#      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+#      with:
+#        arguments: |
+#          assemble
+#          publish
+#          -Psigning.keyId=${{ secrets.KEY_ID }}
+#          -Psigning.password=${{ secrets.SIGNING_PASSWORD }}
+#          -Psigning.secretKeyRingFile=/home/runner/work/big-brother/big-brother/sandman.gpg
+#      env:
+#        ossrh_username: ${{ secrets.OSSRH_USERNAME }}
+#        ossrh_password: ${{ secrets.OSSRH_PASSWORD }}
