--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,29 +1,11 @@
 name: Publish package to the Maven Central Repository
 
 on:
-  pull_request:
-    types: [synchronize]
+  push:
+    branches:
+      - 'main'
 
 jobs:
-  generate-tag:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Generate next tag
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "github-actions@users.noreply.github.com"
-
-      - name: Get next version name
-        id: new-version
-        uses: proudust/gh-describe@v1.5.3
-
-      - name: Write version into build file
-        shell: bash
-        run: |
-          echo "${{ steps.new-version.outputs.describe }}"
-
   build:
 
     runs-on: ubuntu-latest
@@ -41,15 +23,15 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-#    - name: Assemble and publish
-#      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-#      with:
-#        arguments: |
-#          assemble
-#          publish
-#          -Psigning.keyId=${{ secrets.KEY_ID }}
-#          -Psigning.password=${{ secrets.SIGNING_PASSWORD }}
-#          -Psigning.secretKeyRingFile=/home/runner/work/big-brother/big-brother/sandman.gpg
-#      env:
-#        ossrh_username: ${{ secrets.OSSRH_USERNAME }}
-#        ossrh_password: ${{ secrets.OSSRH_PASSWORD }}
+    - name: Assemble and publish
+      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+      with:
+        arguments: |
+          assemble
+          publish
+          -Psigning.keyId=${{ secrets.KEY_ID }}
+          -Psigning.password=${{ secrets.SIGNING_PASSWORD }}
+          -Psigning.secretKeyRingFile=/home/runner/work/big-brother/big-brother/sandman.gpg
+      env:
+        ossrh_username: ${{ secrets.OSSRH_USERNAME }}
+        ossrh_password: ${{ secrets.OSSRH_PASSWORD }}
