--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,11 @@ allprojects {
 
         android {
             namespace "br.com.mrocigno.bigbrother$suffix"
-            compileSdk 33
+            compileSdk 34
 
             defaultConfig {
                 minSdk 23
-                targetSdk 33
+                targetSdk 34
                 versionCode 1
                 versionName "1.0"
                 resConfigs "en", "pt"
@@ -40,17 +40,22 @@ allprojects {
                     proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
                 }
             }
+
             compileOptions {
-                sourceCompatibility JavaVersion.VERSION_11
-                targetCompatibility JavaVersion.VERSION_11
+                sourceCompatibility JavaVersion.VERSION_17
+                targetCompatibility JavaVersion.VERSION_17
             }
+
             kotlinOptions {
-                jvmTarget = '11'
+                jvmTarget = '17'
+            }
+
+            buildFeatures {
+                buildConfig = true
             }
         }
 
         dependencies {
-
             implementation libs.androidx.core
             implementation libs.androidx.appcompat
             implementation libs.material
