--- a/content/network/build.gradle
+++ b/content/network/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias libs.plugins.android.library
     alias libs.plugins.android.kotlin
     id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp'
 }
 
 apply from: file('../../gradle/publish.gradle')
@@ -13,4 +14,8 @@ dependencies {
     implementation project(":content:common")
 
     compileOnly libs.squareup.okhttp3
+
+    implementation libs.androidx.room.runtime
+    implementation libs.androidx.room.ktx
+    ksp libs.androidx.room.compiler
 }
