--- a/content/network/build.gradle
+++ b/content/network/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 
     compileOnly libs.squareup.okhttp3
 
+    implementation libs.androidx.activity
     implementation libs.androidx.room.runtime
     implementation libs.androidx.room.ktx
     ksp libs.androidx.room.compiler
