--- a/content/network/src/main/AndroidManifest.xml
+++ b/content/network/src/main/AndroidManifest.xml
@@ -6,11 +6,17 @@
         <activity
             android:name=".json.JsonViewerActivity"
             android:exported="false"
-            android:theme="@style/Theme.BigBrother"/>
+            android:theme="@style/Theme.BigBrother" />
 
         <activity
             android:name=".ui.NetworkEntryDetailsActivity"
             android:exported="false"
-            android:theme="@style/Theme.BigBrother"/>
+            android:theme="@style/Theme.BigBrother" />
+
+        <provider
+            android:name=".NetworkTask"
+            android:authorities="${applicationId}.NETWORK"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 </manifest>
