--- a/content/network/src/main/AndroidManifest.xml
+++ b/content/network/src/main/AndroidManifest.xml
@@ -13,6 +13,17 @@
             android:exported="false"
             android:theme="@style/Theme.BigBrother" />
 
+        <activity
+            android:name=".ui.NetworkListActivity"
+            android:exported="true"
+            android:theme="@style/Theme.BigBrother">
+
+            <intent-filter>
+                <action android:name="${applicationId}.LIST_NETWORK_SESSION" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <provider
             android:name=".NetworkTask"
             android:authorities="${applicationId}.NETWORK"
