--- a/content/report/build.gradle
+++ b/content/report/build.gradle
@@ -2,21 +2,18 @@ plugins {
     alias libs.plugins.android.library
     alias libs.plugins.android.kotlin
     id 'kotlin-parcelize'
-    id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
 }
 
 apply from: file('../../gradle/publish.gradle')
-
-kapt {
-    correctErrorTypes = true
-}
 
 dependencies {
 
     compileOnly project(":content:core")
     implementation project(":content:common")
 
+    implementation libs.androidx.activity
     implementation libs.androidx.room.runtime
     implementation libs.androidx.room.ktx
-    kapt libs.androidx.room.compiler
+    ksp libs.androidx.room.compiler
 }
