--- a/gradle/libs.toml
+++ b/gradle/libs.toml
@@ -11,6 +11,7 @@ agp = "8.4.0"
 threetenabp = "1.4.4"
 retrofit = "2.9.0"
 okhttp3 = "4.10.0"
+timber = "5.0.1"
 compose-compiler = "1.4.2"
 compose-runtime = "1.3.3"
 # confirm
@@ -47,6 +48,7 @@ compose-activity = { module = "androidx.activity:activity-compose", version = "1
 # Others
 jakewharton-threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
