--- a/content/core/build.gradle
+++ b/content/core/build.gradle
@@ -21,5 +21,6 @@ dependencies {
         api project(":content:report")
         api project(":content:crash")
         api project(":content:database")
+        api project(":content:leak")
     }
 }
