--- a/content/proxy/build.gradle
+++ b/content/proxy/build.gradle
@@ -12,4 +12,6 @@ dependencies {
     implementation project(":content:common")
 
     implementation libs.androidx.activity
+
+    compileOnly libs.squareup.okhttp3
 }
