--- a/content/proxy/src/main/AndroidManifest.xml
+++ b/content/proxy/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
+
+        <activity
+            android:name=".ui.ProxyActivity"
+            android:exported="true"
+            android:theme="@style/Theme.BigBrother"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 </manifest>
