--- a/content/proxy/src/main/AndroidManifest.xml
+++ b/content/proxy/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
         <activity
             android:name=".ui.ProxyActivity"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/Theme.BigBrother"
             android:windowSoftInputMode="adjustResize"/>
     </application>
