--- a/content/proxy/src/main/AndroidManifest.xml
+++ b/content/proxy/src/main/AndroidManifest.xml
@@ -7,6 +7,12 @@
             android:name=".ui.ProxyActivity"
             android:exported="false"
             android:theme="@style/Theme.BigBrother"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" >
+
+            <intent-filter>
+                <action android:name="${applicationId}.CREATE_PROXY_RULE" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
